Updated and ready for grading

--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,8 @@ header .profile-image {
   width: 200px;
   height: 200px;
   border-radius: 40%;
-  border: 3px solid white;
-  transition: all .5s;
+  border: 2px solid white;
+  transition: all 1s;
 }
 header .profile-image:hover {
   transform: scale(1.5) rotate(15deg);
@@ -119,10 +119,15 @@ ul.skills {
   color: white;
   padding: 5px 10px;
   margin: 2px;
+  width: 25%
 }
 
 .skills li:nth-child(odd) {
   background: #0399ff;
+}
+
+.quotecite {
+  color: blue;
 }
 
 footer {
@@ -175,6 +180,33 @@ a.social:hover {
 .h2 {
   text-align: center;
 }
+
+.contact-photo{
+  margin-top: 50px;
+  width: 200px;
+  height: 200px;
+  border-radius: 10%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hobby-photo{
+  margin-top: 50px;
+  margin-bottom: 15px;
+  width: 200px;
+  height: 200px;
+  border-radius: 10%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  transition: all 1s;
+}
+
+.hobby-photo:hover {
+  transform: scale(2);
+}
+
 
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
